[package]
name = "common"
version = "0.1.0"
authors = ["Guillaume Galy <guilgaly@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0" # https://docs.rs/itertools/latest/itertools/
lazy_static = "1.4.0" # https://docs.rs/lazy_static/latest/lazy_static/
maplit = "1.0.2" # container literals - https://docs.rs/maplit/latest/maplit/
regex = "1.7.1" # https://docs.rs/regex/latest/regex/
peg = "0.8.2" # parser combinators - https://docs.rs/peg/latest/peg/
sscanf = "0.4.1" # parse string based on format string - https://docs.rs/sscanf/latest/sscanf/
ascii = "1.1.0" # ASCII-only strings/chars - https://docs.rs/ascii/latest/ascii/
ndarray = "0.15.6" # n-dimensional container - https://docs.rs/ndarray/latest/ndarray/
